@@ -8,6 +8,9 @@ Changes in version 1.0.3 (2008-0x-xx)
 Package org.springframework.osgi.context
 * AbstractDelegatedExecutionApplicationContext rethrows all exceptions occuring during refresh
 
+Package org.springframework.osgi.util
+* fixed parsing exception in DebugUtils when dealing with version ranges
+
 
 Changes in version 1.0.2 (2008-03-25)
 -------------------------------------
